# Rosbot_DeePC

./: .gitignore  rosbot_ws.repos  start_script.sh
.cache/matplotlib/: fontlist-v330.json
datasets/: collect_20260325_141237.csv
patches/: rosbot_ros_odometry_gt.patch
results/: deepc_run_20260327_172236.csv
scripts/: apply_patches.sh  draw_trajectory.py  empty_launch.sh  reset_pose.sh  start_script.sh
src/: circle_test.py  empty_launch.sh  rosbot_ws.repos
src/patches/: rosbot_ros_odometry_gt.patch
src/rosbot_deepc/: package.xml  setup.cfg  setup.py
src/rosbot_deepc/config/: collect.yaml  common_collect.yaml  common_runtime.yaml  common_tracking.yaml  deepc_params.yaml  prbs_collect.yaml  random_collect.yaml  reference_collect.yaml
src/rosbot_deepc/launch/: deepc_collect.launch.py  deepc_tracking.launch.py
src/rosbot_deepc/rosbot_deepc/: collect_base.py  collect_node.py  deepc_node.py  deepc_solver.py  prbs_collect_node.py  random_collect_node.py  reference_collect_node.py  runtime_base.py  tracking_base.py  utils.py
src/rosbot_deepc/test/: test_cleanup_utils.py
src/rosbot_interfaces/: CMakeLists.txt  package.xml
src/rosbot_local_bringup/: package.xml  setup.cfg  setup.py
src/rosbot_local_bringup/launch/: sim_with_gt.launch.py
src/rosbot_local_bringup/rosbot_local_bringup/: reset_server.py  sim_ready_notifier.py
src/scripts/: BA_test.py  apply_patches.sh  check_prediction.py  draw_trajectory.py  empty_launch.sh  inspect_collection.py  kill_processes.sh  rebuild.sh  reset_pose.sh  start_script.sh
src/worlds/: flat_empty.sdf
(+3 files in other folders)
