<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_deepc</name>
  <version>0.0.0</version>
  <description>DeePC package for ROSbot</description>
  <maintainer email="seu7704@dgist.ac.kr">skim</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>std_srvs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rosbot_local_bringup</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-cvxpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
